--- a/box-model-practice/css/style.css
+++ b/box-model-practice/css/style.css
@@ -1,7 +1,30 @@
 /* Please make the h1 30px, with a little padding on the left, and thin red border */
+h1 {
+  font-size: 30px;
+  padding-left: 25px;
+  border: 5px solid red;
+}
 
 /* Please make the h2 25px, with padding on top/bottom, a thick gold border, and margin on the top/bottom */
+h2 {
+  font-size: 25px;
+  padding: 20px 0 20px 0;
+  border: 10px solid gold;
+  margin-top: 25px;
+  margin-bottom: 50px;
+}
 
 /* Please make the spans have a thin black border, a little padding, and blue */
+section span {
+  border: 5px solid black;
+  padding: 10px;
+  color: blue;
+}
 
 /* Please make the section 25% width, 200px tall, centered, and with a thin purple border */
+section {
+  width: 30%;
+  height: 200px;
+  text-align: center;
+  border: 5px solid purple;
+}
